# ecommerce-backend

./: .env.example  .env.infrastructure.example  .gitignore  .gitleaks.toml  .markdown-link-check.json  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  .trivy.yaml  ENV_MIGRATION_GUIDE.md  Makefile  OPTIMIZATION_SUMMARY.md  PHASE_1_CHECKLIST.md  PHASE_1_INDEX.md  PHASE_1_QUICKSTART.md  Procfile  QUICK_START_SECURE.md  README.md  SECURITY_FIXES_SUMMARY.md  SECURITY_VULNERABILITIES_ANALYSIS.md  check_production.py  create_superuser_from_env.py  docker-compose.ci.yml  docker-compose.local.yml  docker-compose.production.yml  pyproject.toml
.github/: CI_RUNBOOK.md  CODEOWNERS  INTEGRATION_ENVIRONMENT.md  WORKFLOWS_CLEANUP_NOTES.md  dependabot.yml
.github/workflows/: ai-services-ci.yml  ai-services-tests.yml  backend-ci.yml  backend-tests.yml  ci-cd.yml  ci.yml  ci.yml.txt  code-quality.yml  dependabot-auto-merge.yml  dependabot-auto-merge.yml.disabled  deploy.yml  docker-build-cache.yml  docker-release.yml  frontend-tests.yml  integration-tests.yml  load-test.yml  policy-check.yml  pr-checks.yml  production-deploy.yml  sbom-generation.yml  secret-scan.yml  security-scan.yml  staging-deploy.yml
ai-services/: .env.example  Dockerfile.template  README.md  docker-compose.yml  requirements.txt  start_all_services.py  start_chatbot_service.py  start_forecasting_service.py  start_fraud_service.py  start_gateway.py  start_pricing_service.py  start_recommendation_service.py  start_search_service.py  start_visual_service.py  test_all_services.py  training_data.json
ai-services/api_gateway/: .env.example  Dockerfile  auth.py  main.py  middleware.py
ai-services/scripts/: generate_test_data.py
ai-services/services/: EXAMPLE_refactored_service.py  SERVICE_TEMPLATE_main.py
ai-services/shared/: config.py
ai-services/test_data/: data_summary.json  fraud_transactions.json  interactions.json  orders.json  products.json  reviews.json  users.json
apps/accounts/: models.py  serializers.py  urls.py  views.py
apps/analytics/: models.py
apps/notifications/: models.py  views.py
apps/orders/: serializers.py  views.py
apps/payments/: admin.py  models.py  webhooks.py
apps/products/: admin.py  documents.py  models.py  tasks.py  views.py
backend/: .env.example  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.optimized  Procfile  README.md  check_production.py  create_superuser_from_env.py  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf
backend/config/: asgi.py  urls.py
backend/core/: celery_tls.py  database_routers.py  exceptions.py  jwks.py  logging.py  middleware.py  pagination.py  permissions.py  resilience.py  service_tokens.py  tracing.py  vault_client.py
backend/requirements/: base.txt  dev.txt  (+2 more)
config/: celery.py  urls.py
core/: db_router.py
docker/: docker
docs/: CDN_SETUP_GUIDE.md  CELERY_TLS_SETUP.md  CIRCUIT_BREAKERS_AND_RESILIENCE.md  COMPLETE_ARCHITECTURE.md  DEPLOYMENT_RUNBOOK.md  DISASTER_RECOVERY.md  DISTRIBUTED_TRACING_AND_SERVICE_AUTH.md  DOCKER_HEALTHCHECKS.md  DOCKER_OPTIMIZATION.md  DOCKER_QUICK_REFERENCE.md  ENVIRONMENT_PARITY.md  IMPLEMENTATION_SUMMARY.md  MONOREPO_STRUCTURE.md  PAYMENT_ISOLATION_AND_PCI_COMPLIANCE.md  PERF-003-IMPLEMENTATION-SUMMARY.md  PHASE_1_EXECUTION_PLAN.md  PHASE_1_STRUCTURE_COMPARISON.md  PHASE_2_EXECUTION_PLAN.md  PHASE_3_EXECUTION_PLAN.md  PHASE_5_EXECUTION_PLAN.md  README.md  SECURITY_AUDIT_FINDINGS.md  SECURITY_REMEDIATION_COMPLETE.md  ai_services_overview.md  deployment_guide.md  enterprise-modernization-plan.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
infrastructure/: DEPLOYMENT_RUNBOOK.md  README.md  SECURITY_CHECKLIST.md  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
integration_tests/: test_health_endpoints.sh  test_service_connectivity.sh
requirements/: base.txt  dev.txt  prod.txt
scripts/: backup_databases.sh  blue_green_deploy.sh  cleanup_repo.sh  generate_service_keys.py  health_check.py  local_dev.sh  restore_database.sh  run_load_tests.sh  setup-sentry.sh  setup_backup_cron.sh  setup_ssl.sh  setup_zero_trust.sh  test_all.sh  tune_connection_pools.sh  update_dockerfiles_multistage.sh  verify_network_security.py  verify_security.sh  verify_structure.py
terraform/: main.tf  security-groups.tf  variables.tf
(+506 files in other folders)
